FIX: fix VS box on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ blockquote {
 
 @media screen and (max-width: 767px) {
     .team-box h3 {
-        font-size: 16px;
+        font-size: clamp(10px, 4vw, 20px);
     }
 
     .vs-box {
